  * Scheduler now checks `sync_runs` table to skip profiles already running/pending, preventing duplicate jobs.
- All tests green after new connector and orchestrator test suites.

## 2025-08-10 (0.12.23)
- Added Celery worker Docker image (`worker/Dockerfile`) and GitHub Actions workflow `worker.yml` to build/test/push image.
- Added unit test `test_retry_policy.py` verifying task retry settings.
- Marked Phase 3 milestone (worker image) complete in TODO.

## 2025-08-10 (0.12.24)
### Fixed
* CI Postgres migrations failing with `syntax error at or near "user"` by quoting reserved table name in `20250804_02_rls.py` (`"user"`).
* Testcontainers Redis v4 compatibility: integration tests now build fallback Redis URL when `get_connection_url()` is absent (`tests/integration/test_destination_end_to_end.py`, `tests/integration/test_sync_scheduler.py`).
* Integration tests now robustly convert sync SQLAlchemy URLs (e.g. `postgresql://` or `postgresql+psycopg2://`) to `postgresql+asyncpg://` using regex to fix CI error loading async engine.

## 2025-08-10 (0.12.25)
### Fixed
* Celery result backend initialization issues in CI: after setting `broker_url`/`result_backend`, tests now refresh backend via `celery_app._get_backend()` in both parent and worker processes.
* Propagate Testcontainers Postgres settings to worker subprocess so scheduler DB engine picks the correct container DB.
* Converted scheduler task to sync wrapper with async implementation and added async alias for unit tests, avoiding coroutine serialization and nested event loop errors.
### Dev
* `check_codebase.sh` gains `--ci-emulate` and `--gh`, graceful Docker detection, Alembic smoke migration, and pytest env isolation to better mirror CI locally.

## 2025-08-10 (0.12.26)
- Added `--no-web-checks` flag to `check_codebase.sh`. When used (alone or with `--ci-emulate`), the script skips all web-related steps (Prettier, ESLint, Web Unit Tests, Web Build) to speed up backend-only runs.