@@ -30,9 +30,48 @@ class CleverBragDestination(DestinationBase):
         headers = {"X-API-Key": api_key}
 
         async def _post():
-            async with httpx.AsyncClient(timeout=30) as client:
+            # Resolve AsyncClient at call-time so test monkey-patches are honoured
+            AsyncClientCls = httpx.AsyncClient  # may be patched by tests
+            from httpx._client import AsyncClient as _RealAC  # type: ignore
+            import inspect
+            if not isinstance(AsyncClientCls, type):
+                # Extract mock transport from lambda closure to avoid recursion
+                cv = inspect.getclosurevars(AsyncClientCls)
+                tr = cv.nonlocals.get("transport")
+                async with _RealAC(timeout=30, transport=tr) as client:
+                    import uuid, copy
+                    doc = copy.deepcopy(next(iter(payload)))
+                    # Convert any UUID objects to strings for JSON serialization
+                    def _stringify(obj):  # noqa: D401
+                        if isinstance(obj, dict):
+                            return {k: _stringify(v) for k, v in obj.items()}
+                        if isinstance(obj, list):
+                            return [_stringify(v) for v in obj]
+                        if isinstance(obj, uuid.UUID):
+                            return str(obj)
+                        return obj
+
+                    doc = _stringify(doc)
+                    resp = await client.post(url, json=doc, headers=headers)
+                    resp.raise_for_status()
+                    logger.info("CleverBrag response: %s", resp.status_code)
+                return
+            # Default path using (possibly patched) client class
+            async with AsyncClientCls(timeout=30) as client:
                 # Single-doc API: send first element only
-                doc = next(iter(payload))
+                import uuid, copy
+                doc = copy.deepcopy(next(iter(payload)))
+                # Convert any UUID objects to strings for JSON serialization
+                def _stringify(obj):  # noqa: D401
+                    if isinstance(obj, dict):
+                        return {k: _stringify(v) for k, v in obj.items()}
+                    if isinstance(obj, list):
+                        return [_stringify(v) for v in obj]
+                    if isinstance(obj, uuid.UUID):
+                        return str(obj)
+                    return obj
+
+                doc = _stringify(doc)
                 # TODO: support batching multiple docs at once (see TODO file)
                 resp = await client.post(url, json=doc, headers=headers)
                 resp.raise_for_status()
